# prettify

./: README.md
answers/week_1/: hello  hello.cpp  hello2  hello2.cpp  monte_carlo_pi  monte_carlo_pi.cpp  pi  pi.cpp
answers/week_2/: continue_hack  continue_hack.cpp  monte_carlo_pi_for  monte_carlo_pi_for.cpp  mutex  mutex.cpp  pi_for  pi_for.cpp  schedules  schedules.cpp
answers/week_3/: pi_nomp  pi_nomp.cpp  pi_parallel  pi_parallel.cpp
answers/week_4/: merge  merge.cpp  merge_sort.cpp
paper/: literature.bib  main.tex
project/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main.cpp  prettify  prettify.cpp  prettify.hpp  prettify_test.cpp
project/Testing/Temporary/: CTestCostData.txt
project/source/: prettify.hpp
project/test/: out_gauss.ppm  out_mean.ppm  out_median.ppm  out_threshold_adaptive_gauss.ppm  out_threshold_adaptive_mean.ppm  prettify_test.cpp
